--- a/tareas.json
+++ b/tareas.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "id": 2,
+    "title": "prubea",
+    "description": "fgsd",
+    "completed": true,
+    "created_at": "2024-10-22 23:39:57"
+  }
+]
